# flask-ckeditor

./: MANIFEST.IN  pyproject.toml  setup.py
examples/: requirements.txt
examples/basic/: app.py
examples/basic/templates/: index.html
examples/main/: app.py  requirements.txt
examples/main/static/full/: ckeditor.js  config.js
examples/main/static/full/plugins/newbutton/: plugin.js
examples/main/static/full/skins/flat/: editor.css  editor_gecko.css  editor_ie.css  editor_ie7.css  editor_ie8.css  editor_iequirks.css
examples/main/templates/: base.html  form.html
flask_ckeditor/: __init__.py
flask_ckeditor/static/full/: config.js
flask_ckeditor/static/full/plugins/exportodt/: plugin.js
flask_ckeditor/static/full/plugins/inputsdb/: plugin.js
flask_ckeditor/static/full/plugins/inputsdb/dialogs/: inputsdb.js
flask_ckeditor/static/full/plugins/savestatic/: plugin.js
flask_ckeditor/static/full/plugins/savestatic/dialogs/: inputsdb.js
flask_ckeditor/static/standard/: config.js
flask_ckeditor/static/standard/plugins/exportodt/: plugin.js
